# controller/channel_authz.go
@@ -122,20 +122,21 @@ func clearChannelReadOnlyFields(channel *PatchChannel, requestData map[string]an
 // to the fail-closed branch and is treated as sensitive. The
 // TestChannelFieldsAreClassified guard test enforces this.
 var channelNonSensitiveFields = map[string]struct{}{
-	"id":                             {},
-	"test_model":                     {},
-	"name":                           {},
-	"weight":                         {},
-	"models":                         {},
-	"group":                          {},
-	"model_mapping":                  {},
-	"status_code_mapping":            {},
-	"priority":                       {},
-	"auto_ban":                       {},
-	"other_info":                     {},
-	"tag":                            {},
-	"remark":                         {},
-	"channel_info":                   {},
-	"multi_key_mode":                 {},
-	"confirm_asset_tenant_unchanged": {},
+	"id":                               {},
+	"test_model":                       {},
+	"name":                             {},
+	"weight":                           {},
+	"models":                           {},
+	"group":                            {},
+	"model_mapping":                    {},
+	"status_code_mapping":              {},
+	"priority":                         {},
+	"auto_ban":                         {},
+	"other_info":                       {},
+	"tag":                              {},
+	"remark":                           {},
+	"channel_info":                     {},
+	"multi_key_mode":                   {},
+	"confirm_asset_tenant_unchanged":   {},
+	"confirm_asset_tenant_replacement": {},
 }
